error with CTA on task list

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -10,7 +10,7 @@
   max-width: 1280px;
 }
 
-.app-destructive-link {
+.destructive-link {
     &.govuk-link {
       color: govuk-colour("red");
     }
