--- a/app/views/create-account/language-preference.html
+++ b/app/views/create-account/language-preference.html
@@ -31,7 +31,7 @@
               text: "Welsh and English"
             },
             {
-              value: "English only",
+              value: "English",
               text: "English only"
             }
           ]
@@ -52,7 +52,7 @@
               text: "Welsh and English"
             },
             {
-              value: "English only",
+              value: "English",
               text: "English only"
             }
           ]
