--- a/app/views/create-account/offence-details/page-by-page/add-offence.html
+++ b/app/views/create-account/offence-details/page-by-page/add-offence.html
@@ -106,12 +106,12 @@
     //     const offenceTitle = document.getElementById('offenceTitle');
 
     //     // Load saved input and update UI accordingly
-    //     offenceInput.value = localStorage.getItem('offenceCode') || '';
+    //     offenceInput.value = sessionStorage.getItem('offenceCode') || '';
     //     updateUI(offenceInput.value);
 
     //     offenceInput.addEventListener('input', function() {
     //         // Save input to local storage
-    //         localStorage.setItem('offenceCode', offenceInput.value);
+    //         sessionStorage.setItem('offenceCode', offenceInput.value);
     //         updateUI(offenceInput.value);
     //     });
 
