--- a/app/assets/sass/settings.scss
+++ b/app/assets/sass/settings.scss
@@ -9,6 +9,6 @@
 
 $govuk-page-width: 1280px;
 
-.moj-header__container {
-    max-width: 1280px;
-}
+// .moj-header__container {
+//     max-width: 1280px;
+// }
