--- a/app/views/create-account/personal-details.html
+++ b/app/views/create-account/personal-details.html
@@ -15,7 +15,7 @@
       
       <h1 class="govuk-heading-l">{{ pageName }}</h1>
 
-      <form method="post" novalidate action="account-details?pdCompleted=true">
+      <form id="personal-details-form" method="post" novalidate action="account-details?pdCompleted=true">
 
         <!-- TITLE -->
         <div>
@@ -140,98 +140,22 @@
 
         <!-- DATE OF BIRTH -->
         <div>
-        <div class="moj-datepicker" data-module="moj-date-picker">
-  
-          <div class="govuk-form-group">
-            <label class="govuk-label govuk-label--s" for="date">
-              Date of birth
-            </label>
-           
-            <div id="date-hint" class="govuk-hint">
-              For example, 31/01/2023
-            </div>
-          
-            <div class="moj-datepicker__wrapper">
-            
-              <div class="govuk-input__wrapper">
-              
-              <input class="govuk-input moj-js-datepicker-input " id="date" name="date" type="text" aria-describedby="date-hint" autocomplete="off"><button class="moj-datepicker-toggle moj-js-datepicker-toggle" type="button" aria-haspopup="dialog" aria-controls="datepicker-date" aria-expanded="false">
-                      <span class="govuk-visually-hidden">Choose date</span>
-                      <svg width="32" height="24" focusable="false" class="moj-datepicker-icon" aria-hidden="true" role="img" viewBox="0 0 22 22">
-                        <path fill="currentColor" fill-rule="evenodd" clip-rule="evenodd" d="M16.1333 2.93333H5.86668V4.4C5.86668 5.21002 5.21003 5.86667 4.40002 5.86667C3.59 5.86667 2.93335 5.21002 2.93335 4.4V2.93333H2C0.895431 2.93333 0 3.82877 0 4.93334V19.2667C0 20.3712 0.89543 21.2667 2 21.2667H20C21.1046 21.2667 22 20.3712 22 19.2667V4.93333C22 3.82876 21.1046 2.93333 20 2.93333H19.0667V4.4C19.0667 5.21002 18.41 5.86667 17.6 5.86667C16.79 5.86667 16.1333 5.21002 16.1333 4.4V2.93333ZM20.5333 8.06667H1.46665V18.8C1.46665 19.3523 1.91436 19.8 2.46665 19.8H19.5333C20.0856 19.8 20.5333 19.3523 20.5333 18.8V8.06667Z"></path>
-                        <rect x="3.66669" width="1.46667" height="5.13333" rx="0.733333" fill="currentColor"></rect>
-                        <rect x="16.8667" width="1.46667" height="5.13333" rx="0.733333" fill="currentColor"></rect>
-                      </svg>
-            </button></div><div id="datepicker-date" class="moj-datepicker-dialog  datepickerDialog" role="dialog" aria-modal="true" aria-labelledby="datepicker-title-date"><div class="moj-datepicker-dialog__header">
-                  <div class="moj-datepicker-dialog__navbuttons">
-                      <button class="moj-datepicker-button moj-js-datepicker-prev-year">
-                          <span class="govuk-visually-hidden">Previous year</span>
-                          <svg width="44" height="40" viewBox="0 0 44 40" fill="none" focusable="false" aria-hidden="true" role="img">
-                            <path fill-rule="evenodd" clip-rule="evenodd" d="M23.1643 20L28.9572 14.2071L27.5429 12.7929L20.3358 20L27.5429 27.2071L28.9572 25.7929L23.1643 20Z" fill="currentColor"></path>
-                            <path fill-rule="evenodd" clip-rule="evenodd" d="M17.1643 20L22.9572 14.2071L21.5429 12.7929L14.3358 20L21.5429 27.2071L22.9572 25.7929L17.1643 20Z" fill="currentColor"></path>
-                          </svg>
-                      </button>
-          
-                      <button class="moj-datepicker-button moj-js-datepicker-prev-month">
-                          <span class="govuk-visually-hidden">Previous month</span>
-          <svg width="44" height="40" viewBox="0 0 44 40" fill="none" focusable="false" aria-hidden="true" role="img">
-            <path fill-rule="evenodd" clip-rule="evenodd" d="M20.5729 20L25.7865 14.2071L24.5137 12.7929L18.0273 20L24.5137 27.2071L25.7865 25.7929L20.5729 20Z" fill="currentColor"></path>
-          </svg>
-                      </button>
-                  </div>
-          
-                  <h2 id="datepicker-title-date" class="moj-datepicker-dialog__title moj-js-datepicker-month-year" aria-live="polite">July 2024</h2>
-          
-                  <div class="moj-datepicker-dialog__navbuttons">
-                      <button class="moj-datepicker-button moj-js-datepicker-next-month">
-                          <span class="govuk-visually-hidden">Next month</span>
-                          <svg width="44" height="40" viewBox="0 0 44 40" fill="none" focusable="false" aria-hidden="true" role="img">
-                            <path fill-rule="evenodd" clip-rule="evenodd" d="M23.4271 20L18.2135 14.2071L19.4863 12.7929L25.9727 20L19.4863 27.2071L18.2135 25.7929L23.4271 20Z" fill="currentColor"></path>
-                          </svg>
-                      </button>
-          
-                      <button class="moj-datepicker-button moj-js-datepicker-next-year">
-                          <span class="govuk-visually-hidden">Next year</span>
-                          <svg width="44" height="40" viewBox="0 0 44 40" fill="none" focusable="false" aria-hidden="true" role="img">
-                            <path fill-rule="evenodd" clip-rule="evenodd" d="M20.8357 20L15.0428 14.2071L16.4571 12.7929L23.6642 20L16.4571 27.2071L15.0428 25.7929L20.8357 20Z" fill="currentColor"></path>
-                            <path fill-rule="evenodd" clip-rule="evenodd" d="M26.8357 20L21.0428 14.2071L22.4571 12.7929L29.6642 20L22.4571 27.2071L21.0428 25.7929L26.8357 20Z" fill="currentColor"></path>
-                          </svg>
-                      </button>
-                  </div>
-            </div>
-          
-            <table class="moj-datepicker-calendar moj-js-datepicker-grid" role="grid" aria-labelledby="datepicker-title-date">
-            <thead>
-                <tr><th scope="col"><span aria-hidden="true">Mon</span><span class="govuk-visually-hidden">Monday</span></th><th scope="col"><span aria-hidden="true">Tue</span><span class="govuk-visually-hidden">Tuesday</span></th><th scope="col"><span aria-hidden="true">Wed</span><span class="govuk-visually-hidden">Wednesday</span></th><th scope="col"><span aria-hidden="true">Thu</span><span class="govuk-visually-hidden">Thursday</span></th><th scope="col"><span aria-hidden="true">Fri</span><span class="govuk-visually-hidden">Friday</span></th><th scope="col"><span aria-hidden="true">Sat</span><span class="govuk-visually-hidden">Saturday</span></th><th scope="col"><span aria-hidden="true">Sun</span><span class="govuk-visually-hidden">Sunday</span></th></tr>
-            </thead>
-      
-            <tbody><tr><td><button style="display: block;"><span class="govuk-visually-hidden">Monday 1 July 2024</span><span aria-hidden="true">1</span></button></td><td><button style="display: block;"><span class="govuk-visually-hidden">Tuesday 2 July 2024</span><span aria-hidden="true">2</span></button></td><td><button style="display: block;"><span class="govuk-visually-hidden">Wednesday 3 July 2024</span><span aria-hidden="true">3</span></button></td><td><button style="display: block;"><span class="govuk-visually-hidden">Thursday 4 July 2024</span><span aria-hidden="true">4</span></button></td><td><button style="display: block;"><span class="govuk-visually-hidden">Friday 5 July 2024</span><span aria-hidden="true">5</span></button></td><td><button style="display: block;"><span class="govuk-visually-hidden">Saturday 6 July 2024</span><span aria-hidden="true">6</span></button></td><td><button style="display: block;"><span class="govuk-visually-hidden">Sunday 7 July 2024</span><span aria-hidden="true">7</span></button></td></tr><tr><td><button style="display: block;"><span class="govuk-visually-hidden">Monday 8 July 2024</span><span aria-hidden="true">8</span></button></td><td><button style="display: block;"><span class="govuk-visually-hidden">Tuesday 9 July 2024</span><span aria-hidden="true">9</span></button></td><td><button style="display: block;"><span class="govuk-visually-hidden">Wednesday 10 July 2024</span><span aria-hidden="true">10</span></button></td><td><button style="display: block;"><span class="govuk-visually-hidden">Thursday 11 July 2024</span><span aria-hidden="true">11</span></button></td><td><button style="display: block;"><span class="govuk-visually-hidden">Friday 12 July 2024</span><span aria-hidden="true">12</span></button></td><td><button style="display: block;"><span class="govuk-visually-hidden">Saturday 13 July 2024</span><span aria-hidden="true">13</span></button></td><td><button style="display: block;"><span class="govuk-visually-hidden">Sunday 14 July 2024</span><span aria-hidden="true">14</span></button></td></tr><tr><td><button style="display: block;"><span class="govuk-visually-hidden">Monday 15 July 2024</span><span aria-hidden="true">15</span></button></td><td><button style="display: block;"><span class="govuk-visually-hidden">Tuesday 16 July 2024</span><span aria-hidden="true">16</span></button></td><td><button style="display: block;"><span class="govuk-visually-hidden">Wednesday 17 July 2024</span><span aria-hidden="true">17</span></button></td><td><button style="display: block;"><span class="govuk-visually-hidden">Thursday 18 July 2024</span><span aria-hidden="true">18</span></button></td><td><button style="display: block;"><span class="govuk-visually-hidden">Friday 19 July 2024</span><span aria-hidden="true">19</span></button></td><td><button style="display: block;"><span class="govuk-visually-hidden">Saturday 20 July 2024</span><span aria-hidden="true">20</span></button></td><td><button style="display: block;"><span class="govuk-visually-hidden">Sunday 21 July 2024</span><span aria-hidden="true">21</span></button></td></tr><tr><td><button style="display: block;"><span class="govuk-visually-hidden">Monday 22 July 2024</span><span aria-hidden="true">22</span></button></td><td><button style="display: block;"><span class="govuk-visually-hidden">Tuesday 23 July 2024</span><span aria-hidden="true">23</span></button></td><td><button style="display: block;"><span class="govuk-visually-hidden">Wednesday 24 July 2024</span><span aria-hidden="true">24</span></button></td><td><button style="display: block;"><span class="govuk-visually-hidden">Thursday 25 July 2024</span><span aria-hidden="true">25</span></button></td><td><button style="display: block;"><span class="govuk-visually-hidden">Friday 26 July 2024</span><span aria-hidden="true">26</span></button></td><td><button style="display: block;"><span class="govuk-visually-hidden">Saturday 27 July 2024</span><span aria-hidden="true">27</span></button></td><td><button style="display: block;"><span class="govuk-visually-hidden">Sunday 28 July 2024</span><span aria-hidden="true">28</span></button></td></tr><tr><td><button style="display: block;"><span class="govuk-visually-hidden">Monday 29 July 2024</span><span aria-hidden="true">29</span></button></td><td><button style="display: block;"><span class="govuk-visually-hidden">Tuesday 30 July 2024</span><span aria-hidden="true">30</span></button></td><td><button style="display: block;"><span class="govuk-visually-hidden">Wednesday 31 July 2024</span><span aria-hidden="true">31</span></button></td><td><button style="display: none;"><span class="govuk-visually-hidden">Thursday 1 August 2024</span><span aria-hidden="true">1</span></button></td><td><button style="display: none;"><span class="govuk-visually-hidden">Friday 2 August 2024</span><span aria-hidden="true">2</span></button></td><td><button style="display: none;"><span class="govuk-visually-hidden">Saturday 3 August 2024</span><span aria-hidden="true">3</span></button></td><td><button style="display: none;"><span class="govuk-visually-hidden">Sunday 4 August 2024</span><span aria-hidden="true">4</span></button></td></tr><tr><td><button style="display: none;"><span class="govuk-visually-hidden">Monday 5 August 2024</span><span aria-hidden="true">5</span></button></td><td><button style="display: none;"><span class="govuk-visually-hidden">Tuesday 6 August 2024</span><span aria-hidden="true">6</span></button></td><td><button style="display: none;"><span class="govuk-visually-hidden">Wednesday 7 August 2024</span><span aria-hidden="true">7</span></button></td><td><button style="display: none;"><span class="govuk-visually-hidden">Thursday 8 August 2024</span><span aria-hidden="true">8</span></button></td><td><button style="display: none;"><span class="govuk-visually-hidden">Friday 9 August 2024</span><span aria-hidden="true">9</span></button></td><td><button style="display: none;"><span class="govuk-visually-hidden">Saturday 10 August 2024</span><span aria-hidden="true">10</span></button></td><td><button style="display: none;"><span class="govuk-visually-hidden">Sunday 11 August 2024</span><span aria-hidden="true">11</span></button></td></tr></tbody>
-            </table>
-          
-            <div class="govuk-button-group">
-              <button type="button" class="govuk-button moj-js-datepicker-ok" value="ok">Select</button>
-              <button type="button" class="govuk-button govuk-button--secondary moj-js-datepicker-cancel" value="cancel">Close</button>
-            </div></div>
-          
-            </div>
-          
-          </div>
-          
-        </div>
-        <!-- {{ govukInput({
-          id: "defendantDOB",
-          classes: "govuk-input--width-10",
-          name: "defendantDOB",
-          label: {
-            text: "Date of birth",
-            classes: "govuk-label--s"
-          },
-          hint: {
-            text: "For example, 31/01/2023"
-          },
-          value: data['defendantDOB']
-        }) }} -->
 
+          {{ govukInput({
+            label: {
+              text: "Date of birth",
+              classes: "govuk-label--s"
+            },
+            classes: "govuk-input--width-10",
+            id: "defendantDateOfBirth",
+            name: "defendantDateOfBirth",
+            spellcheck: false,
+            value: data['defendantDateOfBirth'],
+            hint: {
+              text: "For example, 31/01/2023"
+            }
+          }) }}
+          
         </div>
 
         <!-- NATIONAL INSURANCE NUMBER -->  
@@ -245,7 +169,10 @@
           id: "national-insurance-number",
           name: "defendantNationalInsuranceNumber",
           spellcheck: false,
-          value: data['defendantNationalInsuranceNumber']
+          value: data['defendantNationalInsuranceNumber'],
+          hint: {
+            text: "For example, ‘QQ 12 34 56 C’"
+          }
         }) }}
         </div>
 
@@ -262,7 +189,7 @@
           {{ govukInput({
             label: {
               text: "Address line 1",
-              classes: "govuk-label--s"
+              classes: "govuk-label"
             },
             id: "address-line-1",
             name: "addressLine1",
@@ -274,7 +201,7 @@
           {{ govukInput({
             label: {
               text: "Address line 2",
-              classes: "govuk-label--s"
+              classes: "govuk-label"
             },
             id: "address-line-2",
             name: "addressLine2",
@@ -286,7 +213,7 @@
           {{ govukInput({
             label: {
               text: "Address line 3",
-              classes: "govuk-label--s"
+              classes: "govuk-label"
             },
             id: "address-line-3",
             name: "addressLine3",
@@ -299,7 +226,7 @@
           {{ govukInput({
             label: {
               text: "Postcode",
-              classes: "govuk-label--s"
+              classes: "govuk-label"
             },
             classes: "govuk-input--width-10",
             id: "address-postcode",
@@ -340,29 +267,23 @@
 
         {% endif %}
 
-       
-
 
         <div class="govuk-button-group">
           <button type="submit" class="govuk-button">
             Return to account details
           </button>
+          {% if data['defendantTypeF'] == "Adult or youth only" %}
           <button type="submit" class="govuk-button govuk-button--secondary"  formaction="./contact-details?pdCompleted=true">
-            Add personal details
+            Add contact details
           </button>
+          {% endif %}
+          {% if data['defendantTypeF'] == "Adult or youth with parent or guardian to pay" %}
+          <button type="submit" class="govuk-button govuk-button--secondary"  formaction="./add-offence?pdCompleted=true">
+            Add offence details
+          </button>
+          {% endif %}
         </div>
         
-        <!-- <div class="govuk-button-group">
-          {{ govukButton({
-            text: "Return to account details"
-          }) }}
-
-          {{ govukButton({
-            text: "Add contact details",
-            classes: "govuk-button--secondary",
-            href: "./contact-details.htmlpdCompleted=true"
-          }) }}        
-        </div> -->
 
       </form>
 
@@ -371,5 +292,38 @@
 
     </div>
   </div>
+
+  <script>
+document.addEventListener('DOMContentLoaded', function() {
+    const form = document.getElementById('personal-details-form');
+    const formFields = form.querySelectorAll('input[type="text"], input[type="email"], input[type="tel"], textarea');
+
+    // Function to check if any form field is filled out
+    function isFormFilled() {
+        for (let field of formFields) {
+            if (field.value.trim() !== '') {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    // Update status based on form input
+    function updateStatus() {
+        if (isFormFilled()) {
+            localStorage.setItem('personalDetailsProvided', 'true');
+        } else {
+            localStorage.setItem('personalDetailsProvided', 'false');
+        }
+    }
+
+    // Add event listeners to form buttons
+    form.addEventListener('submit', function() {
+        updateStatus();
+    });
+});
+
+
+  </script>
 
 {% endblock %}
